KULRICE-3258: When setting up new document types the active flag is always reset to No https://test.kuali.org/jira/browse/KULRICE-3258
DocumentType.setActive(boolean active) was assigning to active instead of this.active